# loadsamoney

./: bun.lockb  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/(app)/: layout.tsx  page.tsx
app/(app)/accounts/_components/: create-account-modal.tsx
app/(app)/transactions/: layout.tsx  page.tsx
app/(app)/users/create/: page.tsx
app/dashboard/: page.tsx
components/ui/: date-picker.tsx  main-nav.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/prisma/migrations/20240604021443_init/: migration.sql
src-tauri/prisma/migrations/20240706031735_init/: migration.sql
src-tauri/src/: main.rs
types/: bindings.ts
